Даниил меня не уважает

--- a/templates/about.html
+++ b/templates/about.html
@@ -59,7 +59,7 @@
         <p>Дякуємо, що обрали "Магазин Телефонів". Ми раді стати частиною вашого технологічного світу!</p>
     </div>
 
-    <a href="index.html" class="back-button">Повернутися назад</a> <!-- Кнопка для повернення на главную страницу -->
+    <a href="{{ url_for('index') }}" class="back-button">Повернутися назад</a> <!-- Кнопка для повернення на главную страницу -->
 
 </body>
 </html>
