--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Магазин Телефонів</title>
     <link rel="stylesheet" href="{{url_for('static', filename='styles/style.css')}}">
-    <script>function about(){window.location.href="{{url_for('about')}}";}</script>
-    <script>function home1(){window.location.href="{{url_for('home')}}";}</script>
 </head>
 <body>
     <header>
@@ -15,8 +13,8 @@
             <h1 class="logo-text">Магазин Телефонів</h1>
         </div>
         <nav class="navbar">
-            <button onclick="home1()" class="nav-button">Головна</button>
-            <button onclick="about()" class="nav-button">Про нас</button>
+            <a href="{{ url_for('index') }}" class="nav-button">Головна</a>
+            <a href="{{ url_for('about') }}" class="nav-button">Про нас</a>
         </nav>
     </header>
 
