--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Магазин Телефонів</title>
     <link rel="stylesheet" href="{{url_for('static', filename='styles/style.css')}}">
-    <script>function about(){window.location.href="{{url_for('about')}}";}</script>
-    <script>function home1(){window.location.href="{{url_for('home')}}";}</script>
 </head>
 <body>
     <header>
@@ -15,8 +13,8 @@
             <h1 class="logo-text">Магазин Телефонів</h1>
         </div>
         <nav class="navbar">
-            <button onclick="home1()" class="nav-button">Головна</button>
-            <button onclick="about()" class="nav-button">Про нас</button>
+            <a href="{{ url_for('index') }}" class="nav-button">Головна</a>
+            <a href="{{ url_for('about') }}" class="nav-button">Про нас</a>
         </nav>
     </header>
 
@@ -45,21 +43,21 @@
                 <button class="order-button" onclick="navigateTo('order')">Замовити</button>
             </div>
             <div class="product-card" onmouseover="this.classList.add('hover-effect')" onmouseout="this.classList.remove('hover-effect')">
-                <img src="oneplus.jpg" alt="OnePlus 9" class="product-image">
-                <h3>OnePlus 9</h3>
+                <img src="vivo.jpg" alt="Vivo x100 ultra" class="product-image">
+                <h3>Vivo x100 ultra</h3>
                 <p class="price">$729</p>
                 <button class="order-button" onclick="navigateTo('order')">Замовити</button>
             </div>
             <div class="product-card" onmouseover="this.classList.add('hover-effect')" onmouseout="this.classList.remove('hover-effect')">
-                <img src="xiaomi.jpg" alt="Xiaomi Mi 11" class="product-image">
-                <h3>Xiaomi Mi 11</h3>
+                <img src="samsungs24.jpg" alt="samsung s24" class="product-image">
+                <h3>samsung s24</h3>
                 <p class="price">$749</p>
                 <button class="order-button" onclick="navigateTo('order')">Замовити</button>
             </div>
             <div class="product-card" onmouseover="this.classList.add('hover-effect')" onmouseout="this.classList.remove('hover-effect')">
-                <img src="nokia.jpg" alt="Nokia 8.3" class="product-image">
-                <h3>Nokia 8.3</h3>
-                <p class="price">$499</p>
+                <img src="iphone.webp" alt="Iphone 16" class="product-image">
+                <h3>Iphone 16</h3>
+                <p class="price">$1500</p>
                 <button class="order-button" onclick="navigateTo('order')">Замовити</button>
             </div>
         </section>
