--- a/templates/products.html
+++ b/templates/products.html
@@ -13,8 +13,8 @@
             <h1 class="logo-text">Магазин Телефонів</h1>
         </div>
         <nav class="navbar">
-            <button onclick="navigateTo('index')" class="nav-button">Головна</button>
-            <button onclick="navigateTo('about')" class="nav-button">Про нас</button>
+            <a href="{{ url_for('index') }}" class="nav-button">Головна</a>
+            <a href="{{ url_for('about') }}" class="nav-button">Про нас</a>
         </nav>
     </header>
 
@@ -57,7 +57,7 @@
             <div class="product-card" onmouseover="this.classList.add('hover-effect')" onmouseout="this.classList.remove('hover-effect')">
                 <h3>Iphone 16</h3>
                 <img src="iphone16.jpg" alt="Iphone 16" class="product-image">
-                <p class="price">$499</p>
+                <p class="price">$1500</p>
                 <button class="order-button" onclick="navigateTo('order')">Замовити</button>
             </div>
         </section>
